MethodSummariser owns a SymbolicConstraintGenerator